kubernetes/apps/app-cluster/media/jellyseerr/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr-internal
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
    gethomepage.dev/description: "Media requests and approvals (internal)"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "http://requests.krapulax.home"
    gethomepage.dev/icon: "jellyseerr.png"
    gethomepage.dev/name: "Jellyseerr (internal)"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - requests.krapulax.home
  rules:
    - backendRefs:
        - name: jellyseerr
          namespace: media
          port: 5055
