kubernetes/apps/app-cluster/media/jellyseerr/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: requests.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "Media requests and approvals"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "https://requests.krapulax.dev"
    gethomepage.dev/icon: "jellyseerr.png"
    gethomepage.dev/name: "Jellyseerr"
    gethomepage.dev/weight: "30"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - requests.krapulax.dev
  rules:
    - backendRefs:
        - name: jellyseerr
          namespace: media
          port: 5055
